--- a/InstructorMaster.master
+++ b/InstructorMaster.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="InstructorMaster.master.cs" Inherits="InstructorMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="InstructorMaster.master.cs" Inherits="MasterPage" %>
 
 <!DOCTYPE html>
 
