--- a/MasterPage3.master
+++ b/MasterPage3.master
@@ -27,7 +27,7 @@
         <!-- end #header -->
         <div id="menu-wrapper">
             <ul id="menu">
-                <li class="current_page_item"><a href="HomePage.aspx"><span>Homepage</span></a></li>
+                <li><a href="HomePage.aspx"><span>Homepage</span></a></li>
                 <li><a href="ContactUs.aspx"><span>Contact us</span></a></li>
                 <li><a href="Login.aspx"><span>Login</span></a></li>
             </ul>
