--- a/AnonymousMaster.master
+++ b/AnonymousMaster.master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage3.master.cs" Inherits="MasterPage3" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="AnonymousMaster.master.cs" Inherits="AnonymousMaster" %>
 
 <!DOCTYPE html>
 
