--- a/AdminMaster.master
+++ b/AdminMaster.master
@@ -15,6 +15,8 @@
     
 </head>
 <body>
+    
+        <form id="form2" runat="server">
     <div id="wrapper">
         <div id="header-wrapper">
             <div id="header">
@@ -41,58 +43,69 @@
         <div id="page">
             <div id="sidebar-bg">
                 <div id="sidebar">
-                    <ul>
-                        <li>
-                            <h2>Menu</h2>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink1" runat="server" ForeColor="Black">Students</asp:HyperLink>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink2" runat="server" ForeColor="Black">Instructors</asp:HyperLink>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink3" runat="server" ForeColor="Black">Departments</asp:HyperLink>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink4" runat="server" ForeColor="Black">Courses</asp:HyperLink>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink5" runat="server" ForeColor="Black">Exams</asp:HyperLink>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink6" runat="server" ForeColor="Black">Questions</asp:HyperLink>
-                        </li>
-                        <li>
-                            <h2>Blogroll</h2>
-                            <ul>
-                                <li><a href="#">Aliquam libero</a></li>
-                                <li><a href="#">Suspendisse iaculis mauris</a></li>
-                                <li><a href="#">Urnanet non molestie semper</a></li>
-                                <li><a href="#">Proin gravida orci porttitor</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <h2>Archives</h2>
-                            <ul>
-                                <li><a href="#">Aliquam libero</a></li>
-                                <li><a href="#">Consectetuer adipiscing elit</a></li>
-                                <li><a href="#">Suspendisse iaculis mauris</a></li>
-                                <li><a href="#">Urnanet non molestie semper</a></li>
-                                <li><a href="#">Proin gravida orci porttitor</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <asp:TreeView runat="server" ID="TreeView1" Font-Bold="True" ForeColor="Black" ExpandDepth="0" >    
+                 <Nodes>    
+                   <asp:TreeNode Text="Home" NavigateUrl="~/Admin/HomePage_Admin.aspx" Target="_blank"/>    
+                    <asp:TreeNode Text="Students" >    
+                      <asp:TreeNode Text="Info" NavigateUrl="~/Admin/StudentPage.aspx" Target="_blank" />    
+                      <asp:TreeNode Text="Exam Results" NavigateUrl="~/Admin/StudentResults.aspx" Target="_blank" />    
+                      <asp:TreeNode Text="Exams by ID" NavigateUrl="~/Admin/StudentExamsByStudentID.aspx" Target="_blank" />  
+                       <asp:TreeNode Text="Exam Model Ans" NavigateUrl="~/Admin/Student-Exam-ModelAnser.aspx" Target="_blank" />
+                        <asp:TreeNode Text="Brief Info" NavigateUrl="~/Admin/SpecficStudentInformatin.aspx" Target="_blank" />
+                        <asp:TreeNode Text="Exams by Date" NavigateUrl="~/Admin/ExamStudentsByDate.aspx" Target="_blank" /> 
+                         <asp:TreeNode Text="Corrective per Course" NavigateUrl="~/Admin/CorrectivePerCourse.aspx" Target="_blank" /> 
+                         <asp:TreeNode Text="Corrective per Dept." NavigateUrl="~/Admin/CorrectivePerDept.aspx" Target="_blank" />  
+                   </asp:TreeNode>    
+                    <asp:TreeNode Text="Instructors">    
+                        <asp:TreeNode Text="Info" NavigateUrl="~/Admin/InstructorPage.aspx" Target="_blank" />    
+                        <asp:TreeNode Text="Salary" NavigateUrl="~/Admin/InstructorSalary.aspx" Target="_blank" />    
+                        <asp:TreeNode Text="Display All" NavigateUrl="~/Admin/SelectAllInstructorPage.aspx" Target="_blank" /> 
+                        <asp:TreeNode Text="Ins per Course" NavigateUrl="~/Admin/InstructorPerCourse.aspx" Target="_blank" />       
+                    </asp:TreeNode>    
+                    <asp:TreeNode Text="Courses">    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/CoursePage.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Average Grade" NavigateUrl="~/Admin/CourseAvgGrade.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Students per Course" NavigateUrl="~/Admin/CoursePerStudent.aspx" Target="_blank" />    
+                        <asp:TreeNode Text="Topics">    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/TopicPageMaster.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Topics per Course" NavigateUrl="~/Admin/TopicPerCourse.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Insert" NavigateUrl="~/Admin/TopicInsert.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Update" NavigateUrl="~/Admin/TopicUpdate.aspx" Target="_blank" />    
+                    <asp:TreeNode Text="Delete" NavigateUrl="~/Admin/TopicDelete.aspx" Target="_blank" />    
+               
+                    </asp:TreeNode>
+                    </asp:TreeNode>   
+                       <asp:TreeNode Text="Departments">    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/DepartmentPage.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Managers" NavigateUrl="~/Admin/DepartmentsWithManagers.aspx" Target="_blank" />     
+                    </asp:TreeNode> 
+                       <asp:TreeNode Text="Questions">    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/QuestionPage.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Q per Course" NavigateUrl="~/Admin/QuestionPerCourse.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Q without Model Ans" NavigateUrl="~/Admin/QuestionsCoursesWithoutModelAns.aspx" Target="_blank" />    
+                    </asp:TreeNode> 
+                       <asp:TreeNode Text="Exams">    
+                       <asp:TreeNode Text="Generate Exam" NavigateUrl="~/Admin/GenerateExam.aspx" Target="_blank" />     
+                    </asp:TreeNode> 
+                       <asp:TreeNode Text="Reports">    
+                       <asp:TreeNode Text="Student in Department" NavigateUrl="~/Reports/Report1.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Grades per Courses" NavigateUrl="~/Reports/Report2.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Inst-Stud per Course" NavigateUrl="~/Reports/Report3.aspx" Target="_blank" />   
+                       <asp:TreeNode Text="Topics per Course" NavigateUrl="~/Reports/Report4.aspx" Target="_blank" /> 
+                       <asp:TreeNode Text="Questions per Exam" NavigateUrl="~/Reports/Report5.aspx" /> 
+                       <asp:TreeNode Text="Student-Ans per Exam" NavigateUrl="~/Reports/Report6.aspx" Target="_blank" />       
+                    </asp:TreeNode>  
+                 </Nodes>    
+             </asp:TreeView>    
                 </div>
             </div>
+            
             <!-- end #sidebar -->
             <div id="content">
-                <form id="form1" runat="server">
                     <div>
                         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                         </asp:ContentPlaceHolder>
                     </div>
-                </form>
             </div>
             <!-- end #content -->
             <div style="clear: both;">&nbsp;</div>
@@ -103,6 +116,7 @@
         <p>2012. Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">fotogrph</a>.</p>
     </div>
     <!-- end #footer -->
+    </form>
 </body>
 </html>
 
