--- a/InstructorMaster.master
+++ b/InstructorMaster.master
@@ -46,13 +46,10 @@
                             <h2>Menu</h2>
                         </li>
                         <li>
-                            <asp:HyperLink ID="HyperLink2" runat="server" ForeColor="Black">Instructors</asp:HyperLink>
+                            <asp:HyperLink ID="HyperLink2" runat="server" ForeColor="Black">Update Information</asp:HyperLink>
                         </li>
                         <li>
-                            <asp:HyperLink ID="HyperLink4" runat="server" ForeColor="Black">Topics per Course</asp:HyperLink>
-                        </li>
-                        <li>
-                            <asp:HyperLink ID="HyperLink5" runat="server" ForeColor="Black">Exams</asp:HyperLink>
+                            <asp:HyperLink ID="HyperLink4" runat="server" ForeColor="Black">Students</asp:HyperLink>
                         </li>
                         <li>
                             <h2>Blogroll</h2>
