--- a/AdminMaster.master
+++ b/AdminMaster.master
@@ -21,8 +21,8 @@
         <div id="header-wrapper">
             <div id="header">
                 <div id="logo">
-                    <h1><a href="#">Commercial</a></h1>
-                    <p>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></p>
+                    <h1><a href="#">E-LEARING</a></h1>
+                    <p>LEARN ONLINE</p>
                 </div>
             </div>
         </div>
@@ -43,57 +43,57 @@
         <div id="page">
             <div id="sidebar-bg">
                 <div id="sidebar">
-                    <asp:TreeView runat="server" ID="TreeView1" Font-Bold="True" ForeColor="Black" ExpandDepth="0" >    
+                    <asp:TreeView runat="server" ID="TreeView1" Font-Bold="True" ForeColor="Black" ExpandDepth="0" Height="264px" Width="145px" >    
                  <Nodes>    
-                   <asp:TreeNode Text="Home" NavigateUrl="~/Admin/HomePage_Admin.aspx" Target="_blank"/>    
+                   <asp:TreeNode Text="Home" NavigateUrl="~/Admin/HomePage_Admin.aspx"/>    
                     <asp:TreeNode Text="Students" >    
-                      <asp:TreeNode Text="Info" NavigateUrl="~/Admin/StudentPage.aspx" Target="_blank" />    
-                      <asp:TreeNode Text="Exam Results" NavigateUrl="~/Admin/StudentResults.aspx" Target="_blank" />    
-                      <asp:TreeNode Text="Exams by ID" NavigateUrl="~/Admin/StudentExamsByStudentID.aspx" Target="_blank" />  
-                       <asp:TreeNode Text="Exam Model Ans" NavigateUrl="~/Admin/Student-Exam-ModelAnser.aspx" Target="_blank" />
-                        <asp:TreeNode Text="Brief Info" NavigateUrl="~/Admin/SpecficStudentInformatin.aspx" Target="_blank" />
-                        <asp:TreeNode Text="Exams by Date" NavigateUrl="~/Admin/ExamStudentsByDate.aspx" Target="_blank" /> 
-                         <asp:TreeNode Text="Corrective per Course" NavigateUrl="~/Admin/CorrectivePerCourse.aspx" Target="_blank" /> 
-                         <asp:TreeNode Text="Corrective per Dept." NavigateUrl="~/Admin/CorrectivePerDept.aspx" Target="_blank" />  
+                      <asp:TreeNode Text="Info" NavigateUrl="~/Admin/StudentPage.aspx" />    
+                      <asp:TreeNode Text="Exam Results" NavigateUrl="~/Admin/StudentResults.aspx"  />    
+                      <asp:TreeNode Text="Exams by ID" NavigateUrl="~/Admin/StudentExamsByStudentID.aspx"  />  
+                       <asp:TreeNode Text="Exam Model Ans" NavigateUrl="~/Admin/Student-Exam-ModelAnser.aspx"/>
+                        <asp:TreeNode Text="Brief Info" NavigateUrl="~/Admin/SpecficStudentInformatin.aspx" />
+                        <asp:TreeNode Text="Exams by Date" NavigateUrl="~/Admin/ExamStudentsByDate.aspx"  /> 
+                         <asp:TreeNode Text="Corrective per Course" NavigateUrl="~/Admin/CorrectivePerCourse.aspx" /> 
+                         <asp:TreeNode Text="Corrective per Dept." NavigateUrl="~/Admin/CorrectivePerDept.aspx"  />  
                    </asp:TreeNode>    
                     <asp:TreeNode Text="Instructors">    
-                        <asp:TreeNode Text="Info" NavigateUrl="~/Admin/InstructorPage.aspx" Target="_blank" />    
-                        <asp:TreeNode Text="Salary" NavigateUrl="~/Admin/InstructorSalary.aspx" Target="_blank" />    
-                        <asp:TreeNode Text="Display All" NavigateUrl="~/Admin/SelectAllInstructorPage.aspx" Target="_blank" /> 
-                        <asp:TreeNode Text="Ins per Course" NavigateUrl="~/Admin/InstructorPerCourse.aspx" Target="_blank" />       
+                        <asp:TreeNode Text="Info" NavigateUrl="~/Admin/InstructorPage.aspx"  />    
+                        <asp:TreeNode Text="Salary" NavigateUrl="~/Admin/InstructorSalary.aspx" />    
+                        <asp:TreeNode Text="Display All" NavigateUrl="~/Admin/SelectAllInstructorPage.aspx" /> 
+                        <asp:TreeNode Text="Ins per Course" NavigateUrl="~/Admin/InstructorPerCourse.aspx" />       
                     </asp:TreeNode>    
                     <asp:TreeNode Text="Courses">    
-                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/CoursePage.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Average Grade" NavigateUrl="~/Admin/CourseAvgGrade.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Students per Course" NavigateUrl="~/Admin/CoursePerStudent.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/CoursePage.aspx" />    
+                       <asp:TreeNode Text="Average Grade" NavigateUrl="~/Admin/CourseAvgGrade.aspx" />    
+                       <asp:TreeNode Text="Students per Course" NavigateUrl="~/Admin/CoursePerStudent.aspx"  />    
                         <asp:TreeNode Text="Topics">    
-                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/TopicPageMaster.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Topics per Course" NavigateUrl="~/Admin/TopicPerCourse.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Insert" NavigateUrl="~/Admin/TopicInsert.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Update" NavigateUrl="~/Admin/TopicUpdate.aspx" Target="_blank" />    
-                    <asp:TreeNode Text="Delete" NavigateUrl="~/Admin/TopicDelete.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/TopicPageMaster.aspx" />    
+                       <asp:TreeNode Text="Topics per Course" NavigateUrl="~/Admin/TopicPerCourse.aspx" />    
+                       <asp:TreeNode Text="Insert" NavigateUrl="~/Admin/TopicInsert.aspx"  />    
+                       <asp:TreeNode Text="Update" NavigateUrl="~/Admin/TopicUpdate.aspx"  />    
+                    <asp:TreeNode Text="Delete" NavigateUrl="~/Admin/TopicDelete.aspx" />    
                
                     </asp:TreeNode>
                     </asp:TreeNode>   
                        <asp:TreeNode Text="Departments">    
-                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/DepartmentPage.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Managers" NavigateUrl="~/Admin/DepartmentsWithManagers.aspx" Target="_blank" />     
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/DepartmentPage.aspx" />    
+                       <asp:TreeNode Text="Managers" NavigateUrl="~/Admin/DepartmentsWithManagers.aspx" />     
                     </asp:TreeNode> 
                        <asp:TreeNode Text="Questions">    
-                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/QuestionPage.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Q per Course" NavigateUrl="~/Admin/QuestionPerCourse.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Q without Model Ans" NavigateUrl="~/Admin/QuestionsCoursesWithoutModelAns.aspx" Target="_blank" />    
+                       <asp:TreeNode Text="Info" NavigateUrl="~/Admin/QuestionPage.aspx"  />    
+                       <asp:TreeNode Text="Q per Course" NavigateUrl="~/Admin/QuestionPerCourse.aspx"  />    
+                       <asp:TreeNode Text="Q without Model Ans" NavigateUrl="~/Admin/QuestionsCoursesWithoutModelAns.aspx"  />    
                     </asp:TreeNode> 
                        <asp:TreeNode Text="Exams">    
-                       <asp:TreeNode Text="Generate Exam" NavigateUrl="~/Admin/GenerateExam.aspx" Target="_blank" />     
+                       <asp:TreeNode Text="Generate Exam" NavigateUrl="~/Admin/GenerateExam.aspx"  />     
                     </asp:TreeNode> 
                        <asp:TreeNode Text="Reports">    
-                       <asp:TreeNode Text="Student in Department" NavigateUrl="~/Reports/Report1.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Grades per Courses" NavigateUrl="~/Reports/Report2.aspx" Target="_blank" />    
-                       <asp:TreeNode Text="Inst-Stud per Course" NavigateUrl="~/Reports/Report3.aspx" Target="_blank" />   
-                       <asp:TreeNode Text="Topics per Course" NavigateUrl="~/Reports/Report4.aspx" Target="_blank" /> 
+                       <asp:TreeNode Text="Student in Department" NavigateUrl="~/Reports/Report1.aspx" />    
+                       <asp:TreeNode Text="Grades per Courses" NavigateUrl="~/Reports/Report2.aspx"  />    
+                       <asp:TreeNode Text="Inst-Stud per Course" NavigateUrl="~/Reports/Report3.aspx" />   
+                       <asp:TreeNode Text="Topics per Course" NavigateUrl="~/Reports/Report4.aspx"  /> 
                        <asp:TreeNode Text="Questions per Exam" NavigateUrl="~/Reports/Report5.aspx" /> 
-                       <asp:TreeNode Text="Student-Ans per Exam" NavigateUrl="~/Reports/Report6.aspx" Target="_blank" />       
+                       <asp:TreeNode Text="Student-Ans per Exam" NavigateUrl="~/Reports/Report6.aspx"  />       
                     </asp:TreeNode>  
                  </Nodes>    
              </asp:TreeView>    
@@ -113,7 +113,7 @@
         <!-- end #page -->
     </div>
     <div id="footer">
-        <p>2012. Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">fotogrph</a>.</p>
+        <p>2017. Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">fotogrph</a>.</p>
     </div>
     <!-- end #footer -->
     </form>
