--- a/AdminMaster.master
+++ b/AdminMaster.master
@@ -43,7 +43,7 @@
         <div id="page">
             <div id="sidebar-bg">
                 <div id="sidebar">
-                    <asp:TreeView runat="server" ID="TreeView1" Font-Bold="True" ForeColor="Black" ExpandDepth="0" Height="264px" Width="145px" >    
+                    <asp:TreeView runat="server" ID="TreeView1" Font-Bold="True" ForeColor="Black" ExpandDepth="0" Height="264px" Width="145px" ShowLines="True" >    
                  <Nodes>    
                    <asp:TreeNode Text="Home" NavigateUrl="~/Admin/HomePage_Admin.aspx"/>    
                     <asp:TreeNode Text="Students" >    
@@ -113,7 +113,8 @@
         <!-- end #page -->
     </div>
     <div id="footer">
-        <p>2017. Untitled. All rights reserved. Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. Photos by <a href="http://fotogrph.com/">fotogrph</a>.</p>
+        <p>2017. Untitled. All rights reserved.Follow Us <a href="http://templated.co" rel="nofollow">HERE</a>. </p>
+        <p> <a href="http://fotogrph.com/">About Us</a></p>
     </div>
     <!-- end #footer -->
     </form>
