--- a/StudentMaster.master
+++ b/StudentMaster.master
@@ -46,13 +46,13 @@
                             <h2>Menu</h2>
                         </li>
                         <li>
-                            <asp:HyperLink ID="HyperLink2" runat="server" ForeColor="Black">Instructors</asp:HyperLink>
+                            <asp:HyperLink ID="HyperLink2" runat="server" ForeColor="Black" NavigateUrl="~/Student/InstructorPerCourse _St.aspx">Instructors</asp:HyperLink>
                         </li>
                         <li>
-                            <asp:HyperLink ID="HyperLink4" runat="server" ForeColor="Black">Topics per Course</asp:HyperLink>
+                            <asp:HyperLink ID="HyperLink4" runat="server" ForeColor="Black" NavigateUrl="~/Student/TopicsPerCourse_St.aspx">Topics per Course</asp:HyperLink>
                         </li>
                         <li>
-                            <asp:HyperLink ID="HyperLink5" runat="server" ForeColor="Black">Exams</asp:HyperLink>
+                            <asp:HyperLink ID="HyperLink5" runat="server" ForeColor="Black" NavigateUrl="~/Student/StudentAnswersAfterGeneration_St.aspx">Exam</asp:HyperLink>
                         </li>
                         <li>
                             <h2>Blogroll</h2>
