--- a/AdminMaster.master
+++ b/AdminMaster.master
@@ -113,8 +113,7 @@
         <!-- end #page -->
     </div>
     <div id="footer">
-        <p>2017. Untitled. All rights reserved.Follow Us <a href="http://templated.co" rel="nofollow">HERE</a>. </p>
-        <p> <a href="http://fotogrph.com/">About Us</a></p>
+         <p><br />2017. E-Learning. All rights reserved</p>
     </div>
     <!-- end #footer -->
     </form>
