--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,3 @@
-
-/*
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-*/
-
 body {
 	margin: 0;
 	padding: 0;
@@ -171,6 +164,7 @@ img.aligncenter {
 	padding: 0px;
 	background: #3FA43A;
 	border-radius: 10px;
+    text-align: center;
 }
 
 #menu {
@@ -185,6 +179,7 @@ img.aligncenter {
 	font-size: 24px;
 	font-weight: normal;
 	color: #FFFFFF;
+    display:inline-block;
 }
 
 #menu li {
