--- a/AnonymousMaster.master
+++ b/AnonymousMaster.master
@@ -27,6 +27,7 @@
                 <li><a href="HomePage.aspx"><span>Homepage</span></a></li>
                 <li><a href="ContactUs.aspx"><span>Contact us</span></a></li>
                 <li><a href="Login.aspx"><span>Login</span></a></li>
+                <li><a href="ChangePassword.aspx"><span>Change Password</span></a></li>
             </ul>
         </div>
         <!-- end #menu -->
